--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A quick boilerplate API using FastAPI with Postgres, Docker, NGINX",
   "scripts": {
-    "build": "docker-compose -f docker-compose-dev.yml up --build",
-    "start": "docker-compose -f docker-compose-dev.yml up",
+    "build": "docker compose -f docker-compose-dev.yml up --build",
+    "start": "docker compose -f docker-compose-dev.yml up",
     "golive": "git checkout master && git merge dev && git push && git checkout dev"
   },
   "repository": {
