--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -2,14 +2,14 @@ http {
     include /etc/nginx/mime.types;
 
     upstream web {
-        server web;
+        server web:8000;
     }
 
     server {
         listen 80;
         root /usr/share/nginx/html;
 
-        location /api/ {
+        location / {
             proxy_pass http://web;       
         }
     }
