Implemented postgres as specified here https://www.jeffastor.com/blog/pairing-a-postgresql-db-with-your-dockerized-fastapi-app

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,6 +9,8 @@ services:
       - ./db_data/:/var/lib/postgresql/data/
     networks:
       - api_network
+    ports:
+      - 5432:5432
     restart: always
 
   web:
